# Vision-Based-Autonomous-Industrial-Safety-Inspection-Using-ROS2-and-Deep-Learning

industrial_inspection_robot/: CMakeLists.txt  package.xml
industrial_inspection_robot/config/: burger_world.sdf
industrial_inspection_robot/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro
industrial_inspection_robot/industrial_inspection_robot/: data_acq.py
industrial_inspection_robot/launch/: rsp.launch.py  sim.launch.py
