<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>industrial_inspection_robot</name>
  <version>1.0.0</version>
  <description>Vision-Based Autonomous Industrial Safety Inspection Robot developed for ROS 2 Jazzy and Gazebo Harmonic.</description>
  <maintainer email="kaustubhgangurde15@gmail.com">Kaustubh Gangurde</maintainer>
  <license>Apache-2.0</license>
  <author email="kaustubhgangurde15@gmail.com">Kaustubh Gangurde</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>xacro</depend>
  <depend>twist_mux</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
